adicionei um parágrafo

--- a/SITE-EXEMPLO/index.html
+++ b/SITE-EXEMPLO/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui laborum ipsum ea fugit sapiente! Alias officiis modi nemo voluptatum tempore minima maiores aut ratione explicabo deleniti excepturi quos, autem quidem?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam temporibus error amet quam iusto culpa impedit distinctio atque minima voluptatibus, qui laudantium quisquam voluptatem omnis quia odit necessitatibus sed sunt.</p>
 </body>
 </html>
